<resources>
    <string name="app_name">gym</string>
    <string name="welcome">Welcome</string>
    <string name="weight_loss_for_women_your_beauty_matter">Weight loss for women!! your beauty matter</string>
    <string name="start">Start</string>
    <string name="log_in">Log in</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="join">Join</string>
    <string name="full_body_weight_loss">Full body weight loss</string>
    <string name="_7_days">7 DAYS</string>
    <string name="days">Days</string>
    <string name="like_the_exercise">Like the exercise</string>
    <string name="exercises">Exercises</string>
    <string name="dayss">DAYS</string>
    <string name="fat_losing_challenge_wiith_efficient_workouts_join_the_plan_and_fight_the_fat">fat losing challenge wiith efficient workouts join the plan and fight the fat</string>
    <string name="side_step_jack">Side step jack</string>
    <string name="dynamic_chest">Dynamic chest</string>
    <string name="plank">Plank</string>
    <string name="donkey_kicks_left">Donkey kicks left</string>
    <string name="donkey_kicks_right">Donkey kicks right</string>
    <string name="jumping_jacks">Jumping jacks</string>
    <string name="butt_bridge">Butt bridge</string>
    <string name="heel_touch">Heel touch</string>
    <string name="cat_cow_pose">Cat cow pose</string>
    <string name="press_on">Press on</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="update">update</string>
    <string name="delete">Delete</string>
    <string name="new1">New</string>
    <string name="birthday">Birthday</string>
    <string name="note">Note</string>
    <string name="age">Age</string>
    <string name="fat_losing_challenge_with_efficient_workouts_join_the_plan_and_fight_the_fat">fat_losing_challenge_with_efficient_workouts_join_the_plan_and_fight_the_fat</string>
    <string name="add_note">Add note</string>
    <string name="notes_for_your_exercises">Notes for your exercises</string>
    <string name="note1">Enter new Note</string>
    <string name="add_your_exercise_tips">Add your exercise tips</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="fat_losing_challenge_with_efficient_workouts_join_the_plan_and_fight_the_fat1">Fat losing challenge with efficient workouts join the plan and fight the fat</string>
    <string name="start1">Start</string>
    <string name="edit_note">Edit Note</string>
    <string name="enter_the_title1">Enter the title</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="my_notes">My Notes</string>
</resources>