<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercise">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CF6666"
        android:backgroundTint="#ED3272">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="650dp"
            android:text="@string/dayss"
            android:textColor="#F4F4F4"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="500dp"
            android:text="@string/fat_losing_challenge_with_efficient_workouts_join_the_plan_and_fight_the_fat1"
            android:textSize="20dp"
            android:textColor="#FBFBFB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="52dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-28dp"
        app:cardCornerRadius="28dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <CheckBox
                            android:id="@+id/checkbox1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/side_step_jack" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dynamic_chest" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/plank" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <CheckBox
                            android:id="@+id/checkbox4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/donkey_kicks_left" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <CheckBox
                            android:id="@+id/checkbox5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/donkey_kicks_right" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jumping_jacks" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/butt_bridge" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/heel_touch" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <CheckBox
                            android:id="@+id/checkbox9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cat_cow_pose" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/press_on" />
                    </LinearLayout>


                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
