<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#979BA5"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="141dp"
        android:layout_height="154dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ooo"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="30dp"
        android:text="@string/edit_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.592" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="292dp"
                android:layout_height="45dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text=""
                tools:ignore="Autofill,LabelFor,MissingConstraints"
                tools:layout_editor_absoluteX="99dp"
                tools:layout_editor_absoluteY="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="46dp"
                android:layout_height="21dp"
                android:layout_marginBottom="16dp"
                android:text="@string/email"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="275dp"
                android:layout_height="31dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="16dp"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView94"
                android:layout_width="57dp"
                android:layout_height="24dp"
                android:layout_marginBottom="4dp"
                android:text="@string/birthday"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/editTextDate2"
                android:layout_width="272dp"
                android:layout_height="29dp"
                android:ems="10"
                android:inputType="date"
                tools:layout_editor_absoluteX="113dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="116dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#E12F6C"
        android:text="@string/new1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="116dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#FF0000"
        android:text="@string/delete"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="116dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#0E1A45"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>